# auth_app

./: .gitignore  README.md  docker-compose.yml
auth_app/: Dockerfile  main.py  pyproject.toml
post_app/: main.py  pyproject.toml
